# IDSimF

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  README.md
applications/util/: CMakeLists.txt  appUtils_commandlineParser.cpp  appUtils_commandlineParser.hpp  appUtils_inputFileUtilities.cpp  appUtils_inputFileUtilities.hpp  appUtils_integrationRunning.cpp  appUtils_integrationRunning.hpp  appUtils_ionDefinitionReading.cpp  appUtils_ionDefinitionReading.hpp  appUtils_logging.cpp  appUtils_logging.hpp  appUtils_parameterParsing.cpp  appUtils_parameterParsing.hpp  appUtils_signalHandler.cpp  appUtils_signalHandler.hpp  appUtils_simulationConfiguration.cpp  appUtils_simulationConfiguration.hpp  appUtils_stopwatch.cpp  appUtils_stopwatch.hpp  inputFileUtilities.cpp  inputFileUtilities.hpp  ionDefinitionReading.cpp  ionDefinitionReading.hpp  parameterParsing.cpp  parameterParsing.hpp  parameterParsing_macro.hpp
docker/: IDSimF.sh  (+1 more)
modules/BTree/: BTree_abstractNode.cpp  BTree_abstractNode.hpp  BTree_genericBaseNode.hpp  BTree_node.cpp  BTree_node.hpp  BTree_parallelNode.cpp  BTree_parallelNode.hpp  BTree_parallelNodeOriginal.cpp  BTree_parallelNodeOriginal.hpp  BTree_parallelTree.cpp  BTree_parallelTree.hpp  BTree_parallelTreeOriginal.cpp  BTree_parallelTreeOriginal.hpp  BTree_particle.cpp  BTree_particle.hpp  BTree_tree.cpp  BTree_tree.hpp  BTree_treeParticle.cpp  BTree_treeParticle.hpp  CMakeLists.txt
modules/Core/: CMakeLists.txt  Core_constants.hpp  Core_debug.hpp  Core_math.cpp  Core_math.hpp  Core_particle.cpp  Core_particle.hpp  Core_randomGenerators.cpp  Core_randomGenerators.hpp  Core_randomTestSamples.hpp  Core_utils.hpp  Core_vector.cpp  Core_vector.hpp
modules/FileIO/: CMakeLists.txt  FileIO_CSVReader.cpp  FileIO_CSVReader.hpp  FileIO_HDF5Reader.cpp  FileIO_HDF5Reader.hpp  FileIO_HDF5Reader.tpp  FileIO_MolecularStructureReader.cpp  FileIO_MolecularStructureReader.hpp  FileIO_averageChargePositionWriter.cpp  FileIO_averageChargePositionWriter.hpp  FileIO_idealizedQitFFTWriter.cpp  FileIO_idealizedQitFFTWriter.hpp  FileIO_inductionCurrentWriter.cpp  FileIO_inductionCurrentWriter.hpp  FileIO_ionCloudReader.cpp  FileIO_ionCloudReader.hpp  FileIO_scalar_writer.cpp  FileIO_scalar_writer.hpp  FileIO_simpleVTKwriter.cpp  FileIO_simpleVTKwriter.hpp  FileIO_trajectoryExplorerJSONwriter.cpp  FileIO_trajectoryExplorerJSONwriter.hpp  FileIO_trajectoryHDF5Writer.cpp  FileIO_trajectoryHDF5Writer.hpp  FileIO_trajectoryWriterDefs.hpp  PSim_HDF5Reader.cpp  PSim_HDF5Reader.hpp  PSim_HDF5Reader.tpp  PSim_averageChargePositionWriter.cpp  PSim_averageChargePositionWriter.hpp  PSim_idealizedQitFFTWriter.cpp  PSim_idealizedQitFFTWriter.hpp  PSim_inductionCurrentWriter.cpp  PSim_inductionCurrentWriter.hpp  PSim_ionCloudReader.cpp  PSim_ionCloudReader.hpp  PSim_scalar_writer.cpp  PSim_scalar_writer.hpp  PSim_simpleVTKwriter.cpp  PSim_trajectoryExplorerJSONwriter.cpp  (+4 more)
modules/Integration/: CMakeLists.txt  Integration_abstractTimeIntegrator.cpp  Integration_abstractTimeIntegrator.hpp  Integration_fmm3dIntegrator.cpp  Integration_fmm3dIntegrator.hpp  Integration_fmmIntegrator.cpp  Integration_fmmIntegrator.hpp  Integration_fullSumRK4Integrator.cpp  Integration_fullSumRK4Integrator.hpp  Integration_fullSumVerletIntegrator.cpp  Integration_fullSumVerletIntegrator.hpp  Integration_generic.hpp  Integration_parallelRK4Integrator.cpp  Integration_parallelRK4Integrator.hpp  Integration_parallelVerletIntegrator.cpp  Integration_parallelVerletIntegrator.hpp  Integration_velocityIntegrator.cpp  Integration_velocityIntegrator.hpp  Integration_verletIntegrator.cpp  Integration_verletIntegrator.hpp  PSim_abstractTimeIntegrator.cpp  PSim_abstractTimeIntegrator.hpp  PSim_parallelVerletIntegrator.cpp  PSim_parallelVerletIntegrator.hpp  PSim_velocityIntegrator.cpp  PSim_velocityIntegrator.hpp  PSim_verletIntegrator.cpp  PSim_verletIntegrator.hpp
modules/ParticleSimulation/: CMakeLists.txt  PSim_boxStartZone.cpp  PSim_idealizedQitFFTWriter.cpp  PSim_interpolatedField.cpp  PSim_particleStartSplatTracker.cpp  PSim_particleStartSplatTracker.hpp  PSim_particleStartZone.cpp  PSim_particleStartZone.hpp  PSim_sampledFunction.cpp  PSim_sampledFunction.hpp  PSim_sampledWaveform.cpp  PSim_sampledWaveform.hpp  PSim_simionPotentialArray.cpp  PSim_simionPotentialArray.hpp  PSim_simpleVTKwriter.cpp  PSim_sphereStartZone.cpp  PSim_sphereStartZone.hpp  PSim_util.cpp  PSim_util.hpp  PSim_velocityIntegrator.hpp
modules/RS/: CMakeLists.txt  RS_AbstractReaction.cpp  RS_AbstractReaction.hpp  RS_ConcentrationFileWriter.cpp  RS_ConcentrationFileWriter.hpp  RS_ConfigFileParser.cpp  RS_ConfigFileParser.hpp  RS_FieldDependentVantHoffReaction.cpp  RS_FieldDependentVantHoffReaction.hpp  RS_ReactiveParticle.cpp  RS_ReactiveParticle.hpp  RS_SimpleCollisionStepReaction.cpp  RS_SimpleCollisionStepReaction.hpp  RS_Simulation.cpp  RS_Simulation.hpp  RS_SimulationConfiguration.cpp  RS_SimulationConfiguration.hpp  RS_StaticReaction.cpp  RS_StaticReaction.hpp  RS_StaticThermalizingReaction.cpp  RS_StaticThermalizingReaction.hpp  RS_Substance.cpp  RS_Substance.hpp  RS_VantHoffReaction.cpp  RS_VantHoffReaction.hpp  RS_constants.hpp  RS_util.cpp  RS_util.hpp
modules/SpaceCharge/: CMakeLists.txt  SC_fullSumSolver.cpp  SC_fullSumSolver.hpp  SC_generic.cpp  SC_generic.hpp
modules/particleSimulation/: CMakeLists.txt  PSim_HDF5Reader.cpp  PSim_HDF5Reader.hpp  PSim_HDF5Reader.tpp  PSim_abstractTimeIntegrator.cpp  PSim_abstractTimeIntegrator.hpp  PSim_averageChargePositionWriter.cpp  PSim_averageChargePositionWriter.hpp  PSim_boxStartZone.cpp  PSim_boxStartZone.hpp  PSim_constants.hpp  PSim_cylinderStartZone.cpp  PSim_cylinderStartZone.hpp  PSim_idealizedQitFFTWriter.hpp  PSim_inductionCurrentWriter.cpp  PSim_inductionCurrentWriter.hpp  PSim_interpolatedField.cpp  PSim_interpolatedField.hpp  PSim_ionCloudReader.cpp  PSim_ionCloudReader.hpp  PSim_math.cpp  PSim_math.hpp  PSim_parallelVerletIntegrator.cpp  PSim_parallelVerletIntegrator.hpp  PSim_particleStartSplatTracker.cpp  PSim_particleStartSplatTracker.hpp  PSim_particleStartZone.cpp  (+20 more)
(+597 files in other folders)
